--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Plain network</title>
 </head>  
 <body>  
-<h1>블록체인 기술로 당신의 비즈니스를 확장하세요.</h1>  
+<h1>Empower your business<br>with Blockchain Technology</h1>  
 </body>  
 </html>  
