--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <link href="style.css" rel="stylesheet"/>  
 <script src="javascript.js"></script>  
 <head>  
-    <title>Plain network</title>
+    <title>Plain.network</title>
 </head>  
-<body>  
-<h1>Empower your business<br>with Blockchain Technology</h1>  
+<body>
+<img src =""  
+<h1>Empower your business </h1> 
+<h1>with Blockchain Technology </h1>  
+
 </body>  
 </html>  
