--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Plain.network</title>
 </head>  
 <body>
-<img src =""  
+<img src ="./plain logo.png">  
 <h1>Empower your business </h1> 
 <h1>with Blockchain Technology </h1>  
 
