--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE HTML>  
 <html>  
 <meta charset="utf-8">  
-<link href="style.css" rel="stylesheet"/>  
+<link href="style.css" type= "text/css" rel="stylesheet"/>  
 <script src="javascript.js"></script>  
 <head>  
     <title>Plain.network</title>
-</head>  
+</head> 
+
 <body>
 <img src ="./plain logo.png">  
-<h1>Empower your business </h1> 
-<h1>with Blockchain Technology </h1>  
+    <h1>Empower your business </h1> 
+    <h1>with Blockchain Technology </h1>  
 
 </body>  
 </html>  
