--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE HTML>  
 <html>  
-<meta charset="utf-8">  
-  <link href="style.css" type= "text/css" rel="stylesheet"/>  
-<script src="javascript.js"></script>  
-<head>  
+  
+<head> 
     <title>Plain.network</title>
+    <meta charset="utf-8">  
+    <script src="javascript.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet"> 
+    <link href="style.css" type= "text/css" rel="stylesheet"/>
 </head> 
 
 <body>
-<img src ="./plain logo.png">  
+<img src ="./plain logo.png" class= "logo box">  
     <h1>Empower your business </h1> 
     <h1>with Blockchain Technology </h1>  
 
