--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
 <img src ="./plain logo.png" class= "logo box">  
-    <h1>Empower your business </h1> 
-    <h1>with Blockchain Technology </h1>  
+    <h1 id='main'>Empower your business </h1> 
+    <h1 id='main'>with Blockchain Technology </h1>  
 
 </body>  
 </html>  
