--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">  
     <script src="javascript.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet"> 
-    <link href="style.css" type= "text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
 
 <body>
