--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>  
   
 <head> 
-    <title>Plain.network</title>
+    
     <meta charset="utf-8">  
+    <meta name="viewport" content="width=640, maximum-scale=1.0, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Plain.network</title>
     <script src="javascript.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="style.css">
