--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head> 
 
 <body>
-<img src ="./plain logo.png" class= "logo box">  
+<img src ="./plain logo.png" class= "logo-box">  
     <h1 id="main">Empower your business </h1> 
     <h1 id="main">with Blockchain Technology </h1>  
 
