--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 </head> 
 
 <body>
-<img src ="./plain logo.png" class= "logo-box">  
-    <h1 id="main">Empower your business </h1> 
-    <h1 id="main">with Blockchain Technology </h1>  
+    <div class ="header">
+        <img src ="./plain logo.png" class= "top-logo">
+    </div>
 
+    <div class="body">
+        <h1 id="main">Empower your business </h1> 
+        <h1 id="main">with Blockchain Technology </h1> 
+    </div>
+
+  <div class = "footer">
+    <img src ="./plain logo.png" class= "logo-box">
+  </div>
+    
+
+
+    
 </body>  
 </html>  
