--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class ="header">
-        <img src ="./plain logo.png">
+        <img src ="./plain logo.png" class= "top-logo">
     </div>
 
     <div class="body">
