--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class ="header">
-        <img src ="./plain logo.png" id= "top-logo">
+        <h1 class="top-logo"></h1>
     </div>
 
     <div class="body">
