--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class ="header">
-        <h1 class="top-logo"></h1>
+        <img src=./plain logo.png/>
     </div>
 
     <div class="body">
