--- a/index.html
+++ b/index.html
@@ -13,10 +13,29 @@
 </head> 
 
 <body>
-    <div class ="header">
-        <img src=./plain logo.png/>
-    </div>
-
+        <div class="header" role="navigation">
+                <div class="rftb-logo">
+                    <a href="plain.network" title="plain.network">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 323.53 70.95">
+                            <path fill="#FFFFFF" d="M50.4 31.82l.01-.02c1.36-2.42 2.08-6.39 2.08-11.48 0-4.78-.62-8.23-2-11.17C47.9 3.08 42.27 0 33.75 0H0v70.95h10.04V40.3h21.63l15.38 30.65h11.59L41.9 38.45c3.54-.93 6.54-3.26 8.5-6.63zm-16.75-.57H10.04V9.4h22.27c4.72 0 7.74 1.44 9 4.3.48 1.05.85 4.26.85 7.31 0 2.26-.32 5.35-1.03 6.78-.97 2.08-3.63 3.31-7.48 3.46z"></path>
+                            <path fill="#FFFFFF" d="M94.36 70.95h10.13V39.87h36.87v-9.48h-36.87V9.48h38.76V0H94.36z"></path>
+                            <path fill="#FFFFFF" d="M173.54 9.4h23.74v61.55h10.22V9.4h23.74V0h-57.7z"></path>
+                            <path fill="#FFFFFF" d="M318.58 37.68c-1.74-1.66-3.79-2.97-5.99-3.83.48-.34.9-.69 1.24-1.04 3.32-3.27 5.38-8.82 5.38-14.48 0-5.38-1.78-10.16-4.88-13.13-3.77-3.49-8.51-5.2-14.48-5.2h-33.3v70.95H303c6.43 0 11.63-1.78 15.04-5.14 3.64-3.49 5.49-8.31 5.49-14.32 0-5.76-1.81-10.79-4.95-13.81zM276.59 9.14h22.09c3.05 0 5.5.83 7.3 2.48 1.74 1.52 2.92 4.75 2.92 8.02 0 3.95-1.24 7.36-3.41 9.36-1.43 1.37-3.12 1.66-4.29 1.66h-24.61V9.14zm33.72 50.09c-1.97 1.65-4.7 2.49-8.13 2.49h-25.6V39.61h25.77c3.06 0 5.68.92 7.58 2.66 2.17 1.87 3.27 4.82 3.27 8.79.01 3.72-.96 6.47-2.89 8.17z"></path>
+                        </svg>
+                    </a>
+                </div>
+                <div class="navbar-right d-flex align-items-center">
+                    <span class="d-none d-md-block">Creative Digital Agency</span>
+                    <button aria-label="Main Nav" class="nav-toggle">
+                        <div class="hamburger">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
+                    </button>
+                </div>
+            </div>
+    
     <div class="body">
         <h1 id="main">Empower your business </h1> 
         <h1 id="main">with Blockchain Technology </h1> 
