--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </a>
                 </div>
                 <div class="navbar-right d-flex align-items-center">
-                    <span class="d-none d-md-block">Creative Digital Agency</span>
+                    <span class="d-none d-md-block">Plain Networks</span>
                     <button aria-label="Main Nav" class="nav-toggle">
                         <div class="hamburger">
                             <span></span>
