--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
 
 
 <body>
-        
+    <nav class="navigation">
+        <ul>
+          <li>LOCAL</li>
+          <li>NATIONAL</li>
+          <li class="logo">THE TERMINAL</li>
+          <li>GLOBAL</li>
+          <li>OPED</li>
+          <li class="donate">DONATE</li>
+        </ul>
+      </nav>
+          
     <div class="body">
         <h1 id="main">Empower your business </h1> 
         <h1 id="main">with Blockchain Technology </h1> 
